GL-1451 fixed input refs in action.yml

--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,7 @@ inputs:
   repository:
     description: The Repository URI
     required: true
-  id_rsa:
-    description: Command(s) to run
+  client_key:
+    required: true
+  client_secret:
     required: true
